--- a/README
+++ b/README
@@ -13,4 +13,4 @@ The most recent version can be found at https://launchpad.net/gnuclad
 
 For more info and a detailed manual, please consult the Texinfo pages.
 They should be distributed in together with gnuclad and can be found
-in the 'manual' folder.
+in the 'doc' folder.
