--- a/INSTALL
+++ b/INSTALL
@@ -23,8 +23,8 @@ Change to the 'example' folder and generate your first SVG image:
   ../src/gnuclad --help
   ../src/gnuclad example.csv svg example.conf
 
-In order to install gnuclad on a POSIX conform system, change to the main
-directory and run the install routine:
+In order to install gnuclad on a POSIX conform system, change back to the
+main directory and run the install routine:
   cd ..
   make install
 
