--- a/doc/src/version.texi
+++ b/doc/src/version.texi
@@ -1,4 +1,4 @@
 @set UPDATED 4 March 2010
 @set UPDATED-MONTH March 2010
-@set EDITION 0.1.x
-@set VERSION 0.1.x
+@set EDITION experimental-52
+@set VERSION experimental-52
