--- a/doc/src/gnuclad-programming-classes.texi
+++ b/doc/src/gnuclad-programming-classes.texi
@@ -156,8 +156,8 @@ class Connector
 
 
 @*
-The most important class is the @strong{Cladogram}. It is used by a single
-object which describes the whole timeline and will be passed to the
+The most important class is the @strong{Cladogram}. It is instantiated by a
+single object which describes the whole timeline and will be passed to the
 parser/generator.
 The Cladogram usually doesn't need to be accessed by the parser, except for the
 add*** functions.
