--- a/doc/src/gnuclad-programming-config.texi
+++ b/doc/src/gnuclad-programming-config.texi
@@ -11,12 +11,13 @@
 When adding a configuration option, be sure to implement it at least in the
 following places:
 @itemize @bullet
-@item gnuclad.h: members of the Cladogram class (declaration)
-@item gnuclad.cpp: in the constructor of the Cladogram object (initialisation)
-@item gnuclad.cpp: in the parseOptions function
-@item generatorCONF.cpp: insert description of the new option
-@item the texinfo documentation, chapter @ref{Config Options,,Config Options}:
-      insert the new config file created by generatorCONF
+@item src/gnuclad.h: members of the Cladogram class (declaration)
+@item src/gnuclad-cladogram.cpp: in the constructor of the Cladogram object
+                                 (initialisation / default setting)
+@item src/gnuclad-cladogram.cpp: in the parseOptions function
+@item src/generator/conf.cpp: output and description of the new option
+@item doc/src/gnuclad-config.texi: at the bottom, insert the new config file
+                                   created by using 'conf' as output
 @item third party gnuclad configuration files you have access to
 @end itemize
 
@@ -25,14 +26,18 @@ following places:
 @section Using configuration options
 
 The options are usually read by a separate configuration parser, but can be
-modified by the data input parser if necessary and should implemented by the
+modified by the data input parser if necessary and should be implemented by the
 generator as completely as possible.
-The option names are identical to the variable names.
+The option names in the config file are identical to the variable names and can
+be accessed via the cladogram pointer:
+@example
+int myTextSize = clad->labelFontSize;
+clad->monthsInYear = 10;
+@end example
 
-In order to work with the most current config options, open the 'gnuclad.h'
-header file and search for CONFIG OPTIONS. This will take you straight to the
-declarations.
+In order to work with the most current options, open the 'gnuclad.h' header file
+and search for CONFIG OPTIONS. This will take you straight to the declarations.
 
 You can also look at the @ref{Config Options,,Config Options} chapter
-for an explanation of the options.
+for a more detailed explanation.
 
