--- a/doc/src/gnuclad-programming-generator.texi
+++ b/doc/src/gnuclad-programming-generator.texi
@@ -11,9 +11,9 @@
 Steps neccessary to add a generator.
 XXX refers to the output format you want to implement.
 
-src/generatorXXX.h:
+src/generator/XXX.h:
 @example
-#include "gnuclad.h"
+#include "../gnuclad.h"
 derive class from generator:
   class GeneratorXXX: public Generator
 declare constructor and destructor
@@ -21,16 +21,16 @@ declare public method:
   void writeData(Cladogram * clad, OutputFile & out);
 @end example
 
-src/generatorXXX.cpp:
+src/generator/XXX.cpp:
 @example
-#include "generatorXXX.h"
+#include "XXX.h"
 implement constructor and destructor
 implement writeData(Cladogram * clad, OutputFile & out) @{ ... @}
 @end example
 
 src/gnuclad.cpp:
 @example
-#include "generatorXXX.h"
+#include "generator/XXX.h"
 update outFormats
 add choser:
   else if(outputExt == "XXX") generator = new GeneratorXXX;
@@ -38,7 +38,7 @@ add choser:
 
 src/Makefile.am:
 @example
-add to SOURCES: generatorXXX.h generatorXXX.cpp
+add to SOURCES: generator/XXX.h generator/XXX.cpp
 @end example
 
 
