--- a/INSTALL
+++ b/INSTALL
@@ -7,24 +7,24 @@ without any warranty.
 
 ________________________________________________________________________
 
-gnuclad is built with the GNU toolchain, specifically g++ and GNU make.
-These are included in most GNU/Linux distributions and can be obtained
-from the Xcode developer package on OSX.
-On Windows, compilation works flawlessly with MinGW & MSYS, though it may be
-possible with other compilers by tweaking the Makefile.
+gnuclad is built with the GNU toolchain.
+These tools are included in most GNU/Linux distributions and can be
+obtained from the Xcode developer package on OSX.
+On Windows, compilation works flawlessly with MinGW & MSYS.
+Other build systems may work but have not been tested.
 
 To compile gnuclad, open this folder in a terminal and type:
   sh configure
   make
 
-This will produce a 'gnuclad' binary in the src folder.
+This will produce a 'gnuclad' binary in the 'src' folder.
 Change to the 'example' folder and generate your first SVG image:
   cd example
   ../src/gnuclad --help
   ../src/gnuclad example.csv svg example.conf
 
-In order to install gnuclad on a POSIX conform system, change back to the
-main directory and run the install routine:
+In order to install gnuclad on a POSIX conform system, change back to
+the main directory and run the install routine:
   cd ..
   make install
 
