src/parser/dir.cpp: improved parsing, still experimental src/generator/conf.cpp: added dir_showDotDirs src/generator/svg.cpp: added clad->gnuclad_version                                    rounded main background corners src/gnuclad-cladogram.cpp: added truncateFolder, inVitro, dir_showDotDirs                                            added node->size < treeSpacingBiggerThan warning                                            print full source => dest names src/gnuclad.h: added truncateFolder, inVitro, dir_showDotDirs

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,11 @@ created with: bzr log --gnu-changelog
 
 2010-03-06  bryonak  <bryonak@freenet.de>
 
+	src/generator/svg.cpp: implemented out of boundaries infobox
+	turned off default cflags
+
+2010-03-06  bryonak  <bryonak@freenet.de>
+
 	added src/parser/dir*, implemented in src/gnuclad.cpp, src/Makefile.am and across the manual
 	src/gnuclad-helpers.cpp: removed #include "gnuclad-portability.h"
 	src/gnuclad.h: added #include "gnuclad-portability.h"
