--- a/doc/src/gnuclad-programming-classes.texi
+++ b/doc/src/gnuclad-programming-classes.texi
@@ -174,6 +174,8 @@ class Cladogram
   Domain * addDomain(std::string tname);
   Connector * addConnector();
   Image * addImage(std::string tname, std::vector<Image *> &vector);
+
+  std::string gnuclad_version;
 @end example
 
 The cladogram also holds all @ref{Configuration Options,,Configuration Options}.
