--- a/doc/src/gnuclad-programming-generator.texi
+++ b/doc/src/gnuclad-programming-generator.texi
@@ -88,7 +88,7 @@ Example:
   Node * n;
   for(int i = 0; i < (int)clad->nodes.size(); ++i) @{
 
-    n = clad->nodes.at(i);
+    n = clad->nodes[i];
     cout << "\nWe have " << n->name
          << " at offset " << n->offset;
 
