generator/conf.cpp: added asciiStrings                                dir_showDotDirs -> dir_showDotFiles generator/svg.cpp: implemented strlenpx (asciiStrings)                               fixed stop gradients for WebKit (stroke -> style fill)                               less local dirty_hack_ex/em                               add breaks if stopFadeOutPX is 0 parser/dir.cpp: general improvement, working alpha

--- a/ToDo
+++ b/ToDo
@@ -22,6 +22,8 @@ optimise both-subtree at creation time
 implement curved derivType
 implement curved connectors
 
+implement slice node
+
 translatable strings (gettext)
 
                                                                     v0.2
