gnuclad-cladogram.cpp:     implemented slice     improved node erasing (in-place instead of scheduled)     postponed roots selection     fixed nodesPreorder (faster when starting from behind)     warn "unable to assign domain" instead of throw     warn "unable to assign connector" instead of throw     removed entry hint for "node starts after EOT" generator/svg.cpp:     fixed start point with derivType 2     added ( and ) to strlenpx heuristic generator/conf.cpp:     added slice and derivType 2, 3

--- a/ToDo
+++ b/ToDo
@@ -10,7 +10,7 @@ ________________________________________________________________________
 
 implement slice node
 
-implement curved derivType
+implement curved derivType [0.8]
 implement curved connectors
 
 implement optimisation for dir input
@@ -22,6 +22,8 @@ replace config options with enum? (orientation...)
 
 implement time version of parser/dir  (stat)
   (created = deriv, last modified = nameChange)
+
+toFix: renames show after endOfTime if node starts before
 
 write manual on optimisation
 
